2013-08-22  Roland Levillain  <roland@lrde.epita.fr>

	* mln/core/image/dmorph/sub_image.hh: Fix indentation.

2013-08-22  Roland Levillain  <roland@lrde.epita.fr>

	Enable tests/fun/v2i.

	* tests/fun/Makefile.am (SUBDIRS): Add v2i.

2012-07-19  Roland Levillain  <roland@lrde.epita.fr>

	Various aesthetic changes in Milena.

	* mln/data/stretch.hh,
	* mln/fun/x2x/rotation.hh,
	* mln/tag/init.hh,
	* mln/test/positive.hh,
	* mln/test/predicate.hh:
	Here.

2012-07-19  Roland Levillain  <roland@lrde.epita.fr>

	* mln/core/point.hh: Fix documentation.

2012-02-08  Roland Levillain  <roland@lrde.epita.fr>

	* mln/morpho/watershed/flooding.hh: Uniformity-related changes.

2012-02-08  Roland Levillain  <roland@lrde.epita.fr>

	* mln/data/stretch.hh: Do not name unused arguments.

2011-10-06  Roland Levillain  <roland@lrde.epita.fr>

	* tests/util/line_graph.cc: Wrap long lines.

2011-10-06  Roland Levillain  <roland@lrde.epita.fr>

	Use Doxygen grouping commands uniformly in Milena.

	* mln/core/image/graph_elt_neighborhood_if.hh,
	* mln/core/image/graph_elt_window_if.hh,
	* mln/core/image/imorph/labeled_image.hh,
	* mln/core/internal/labeled_image_base.hh,
	* mln/core/site_set/p_edges.hh,
	* mln/fun/i2v/array.hh,
	* mln/util/adjacency_matrix.hh,
	* mln/util/array.hh,
	* mln/util/object_id.hh,
	* mln/util/tracked_ptr.hh,
	* mln/value/lut_vec.hh:
	Here.

2012-05-22  Roland Levillain  <roland@lrde.epita.fr>

	* tests/data/transform.cc: Aesthetic changes.

2011-07-12  Roland Levillain  <roland@lrde.epita.fr>

	Improve the documentation of mln::util::set.

	* mln/util/set.hh: Here.

2011-07-12  Roland Levillain  <roland@lrde.epita.fr>

	Various fixes related to image properties (traits).

	* mln/core/image/vmorph/fun_image.hh,
	* mln/trait/image/props.hh,
	* mln/trait/images.hh:
	Here.

2010-11-29  Roland Levillain  <roland@lrde.epita.fr>

	Clean up white space.

	* mln/core/site_set/p_graph_piter.hh,
	* mln/accu/transform_snake.hh:
	Here.
